# polybar-reddit

./: .gitignore  Cargo.toml  README.md  makefile
.github/workflows/: main.yml  release.yml  rust-release.yml
src/: main.rs
