[package]
name = "polybar-reddit"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
dotenv = "0.15.0"
serde = {version = "1.0.116",  features = ["derive"]}
ureq = { version = "*", features = ["json", "charset"] }