[package]
name = "polybar-reddit"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
dotenv = "0.15.0"
serde = { version = "1.0.123", features = ["derive"] }
ureq = { version = "*", features = ["json", "charset"] }
jemallocator = "0.3.2"
crossbeam-channel = "0.5.0"
threadpool = "1.8.1"
itertools = "0.10.0"
dirs = "3.0.1"
toml = "0.5.8"
serde_json = "1.0.62"
config = "0.10.1"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
